tests/NormalTests/paczka1/fuzzy1/36089631.err
Error in line 4: tY0JMvXdO A59 9,3
Error in line 10: S167 A59 3,9
Error in line 3: KYZzwdH A59 10,4
Error in line 12: S167 A978 64,6
Error in line 7: tY0JMvXdO S167 55,6
